Initial Bluetooth support. Also, French translation.

--- a/LinConnectClient/res/xml/pref_general.xml
+++ b/LinConnectClient/res/xml/pref_general.xml
@@ -6,7 +6,7 @@
         android:title="@string/pref_toggle" >
     </CheckBoxPreference>
 
-    <PreferenceCategory android:title="Setup" >
+    <PreferenceCategory android:title="@string/cat_setup" >
         <Preference
             android:key="pref_download"
             android:summary="@string/pref_download_summary"
@@ -16,6 +16,20 @@
             android:summary="@string/pref_enable_summary"
             android:title="@string/pref_enable" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="@string/cat_method" >
+        <CheckBoxPreference
+	        android:defaultValue="true"
+            android:key="pref_method_wifi"
+            android:disableDependentsState="false"
+            android:summary="@string/pref_method_wifi_summary"
+            android:title="@string/pref_method_wifi" />
+        <CheckBoxPreference
+	        android:defaultValue="false"
+            android:key="pref_method_bt"
+            android:disableDependentsState="false"
+            android:summary="@string/pref_method_bt_summary"
+            android:title="@string/pref_method_bt" />
+    </PreferenceCategory>
     <PreferenceCategory
         android:key="cat_servers"
         android:title="@string/cat_servers" >
@@ -23,6 +37,7 @@
             android:defaultValue="0.0.0.0:9090"
             android:icon="@drawable/ic_checkmark"
             android:key="pref_ip"
+            android:dependency="pref_method_wifi"
             android:order="-1"
             android:selectAllOnFocus="true"
             android:singleLine="true"
@@ -30,15 +45,29 @@
 
         <Preference
             android:key="pref_loading"
+            android:dependency="pref_method_wifi"
             android:layout="@layout/pref_progress"
             android:order="999" >
         </Preference>
         <Preference
             android:icon="@drawable/ic_refresh"
             android:key="pref_refresh"
+            android:dependency="pref_method_wifi"
             android:order="999"
             android:title="@string/pref_refresh" >
         </Preference>
+    </PreferenceCategory>
+    <PreferenceCategory android:title="@string/cat_bt_device" >
+        <ListPreference
+            android:key="bt_device"
+            android:dependency="pref_method_bt"
+            android:summary="@string/bt_device_summary"
+            android:title="@string/bt_device" />
+        <Preference
+            android:key="pref_test_bt"
+            android:dependency="pref_method_bt"
+            android:summary="@string/test_bt_device_summary"
+            android:title="@string/test_bt_device" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/configuration" >
         <Preference
