--- a/LinConnectClient/res/layout/pref_progress.xml
+++ b/LinConnectClient/res/layout/pref_progress.xml
@@ -15,7 +15,7 @@
     android:id="@+id/textView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Scanning network for servers..."
+    android:text="@string/pref_network_scan"
     android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </LinearLayout>
